# gitoxide

./: Cargo.toml  justfile  pulls.ndjson
.github/workflows/: loci-analysis.yml
gitoxide-core/src/: net.rs
gitoxide-core/src/index/: checkout.rs
gitoxide-core/src/pack/: create.rs  receive.rs
gitoxide-core/src/repository/: fetch.rs  log.rs
gix/: Cargo.toml
gix-archive/tests/: archive.rs
gix-attributes/: Cargo.toml
gix-attributes/src/: name.rs  parse.rs
gix-attributes/tests/parse/: mod.rs
gix-bitmap/: Cargo.toml
gix-bitmap/src/: ewah.rs
gix-blame/: Cargo.toml
gix-blame/src/: types.rs
gix-command/tests/: command.rs
gix-commitgraph/: Cargo.toml
gix-commitgraph/src/: bloom.rs  lib.rs
gix-commitgraph/tests/: commitgraph.rs
gix-config/tests/: Cargo.toml
gix-credentials/: Cargo.toml
gix-diff/tests/: Cargo.toml
gix-dir/: Cargo.toml
gix-discover/: Cargo.toml
gix-features/: Cargo.toml
gix-fs/: Cargo.toml
gix-fs/src/: stack.rs
gix-hash/: Cargo.toml
gix-hash/src/: hasher.rs  io.rs  object_id.rs  oid.rs  prefix.rs  verify.rs
gix-index/: Cargo.toml
gix-index/src/: write.rs
gix-index/tests/: Cargo.toml
gix-lock/: Cargo.toml
gix-lock/src/: acquire.rs
gix-mailmap/: Cargo.toml
gix-mailmap/src/: parse.rs
gix-merge/: Cargo.toml
gix-object/: Cargo.toml
gix-object/benches/: decode_objects.rs  edit_tree.rs
gix-object/fuzz/: Cargo.toml
gix-object/src/: data.rs  lib.rs
gix-odb/: Cargo.toml
gix-odb/src/: cache.rs  memory.rs  sink.rs
gix-odb/tests/: Cargo.toml
gix-pack/src/: verify.rs
gix-pack/tests/: Cargo.toml
gix-packetline/: Cargo.toml
gix-packetline/src/: decode.rs  encode.rs  lib.rs
gix-packetline/tests/: async-packetline.rs  blocking-packetline.rs
gix-path/: Cargo.toml
gix-path/src/: realpath.rs  relative_path.rs
gix-pathspec/src/: parse.rs
gix-protocol/: Cargo.toml
gix-protocol/src/: lib.rs
gix-protocol/tests/: blocking-server.rs
gix-quote/: Cargo.toml
gix-quote/src/: ansi_c.rs
gix-ref/: Cargo.toml
gix-refspec/: Cargo.toml
gix-serve/: Cargo.toml
gix-serve/fixtures/generated-archives/: make_repo_empty.tar  make_repo_multi_branch.tar  make_repo_simple.tar  make_repo_with_tags.tar
gix-serve/src/: lib.rs
gix-status/: Cargo.toml
gix-transport/: Cargo.toml
gix-url/: Cargo.toml
gix-url/src/: expand_path.rs  parse.rs  simple_url.rs
gix-worktree-stream/src/: entry.rs
gix-worktree-stream/tests/: stream.rs
gix/examples/: clone.rs
src/plumbing/: main.rs
src/porcelain/: options.rs
tests/tools/: Cargo.toml
(+147 files in other folders)
