lints.workspace = true

[package]
name = "gix-serve"
version = "0.1.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project for serving git repositories"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE-*"]
rust-version = "1.82"

[lib]
doctest = false

[features]
## Enable support for SHA-1 hashes.
sha1 = ["gix-hash/sha1"]

[dependencies]
gix-ref = { version = "^0.60.0", path = "../gix-ref" }
gix-hash = { version = "^0.22.1", path = "../gix-hash" }
bstr = { version = "1.12.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"

[dev-dependencies]
gix-testtools = { path = "../tests/tools" }

[package.metadata.docs.rs]
all-features = true
